--- a/templates/search.html
+++ b/templates/search.html
@@ -47,6 +47,7 @@
 
         <div class="col-md-4 flex-item">
             {{results}}
+            <img src="{{results.column2}}" alt="">
         </div>
       </div>
   </div>
