Add filter brand

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -174,8 +174,10 @@
             response(data);
           });
         },
-        minLength: 2
       });
+      $('#search-box').on('focus', function() {
+              $(this).autocomplete('search', '');
+          });
     });
   </script>
   <script>
