--- a/templates/search.html
+++ b/templates/search.html
@@ -67,7 +67,7 @@
         $(function() {
         $('#search-box').autocomplete({
             source: function(request, response) {
-            $.getJSON('/autocomplete', {
+            $.getJSON('/mainserach', {
                 term: request.term
             }, function(data) {
                 response(data);
@@ -86,5 +86,4 @@
         });
     </script>
 </body>
-
 </html>
